--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "koa-field-validate",
-  "version": "0.0.1-beta",
+  "version": "0.0.1",
   "description": "Parsed body field validation middleware for Koa.",
   "main": "index.js",
   "scripts": {
